<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="common_wallet">Wallet</string>
    <string name="common_crypto">Crypto</string>
    <string name="common_history">History</string>
    <string name="common_send">Send</string>
    <string name="common_buy">Buy</string>
    <string name="common_receive">Receive</string>
    <string name="common_earn">Earn</string>
    <string name="common_feedback">Feedback</string>
    <string name="common_settings">Settings</string>
    <string name="common_paste">Paste</string>
    <string name="common_clear">Clear</string>
    <string name="common_search">Search</string>
    <string name="common_swap">Swap</string>
    <string name="common_all">All</string>
    <string name="common_share">Share</string>
    <string name="common_iban">IBAN</string>
    <string name="common_bic">BIC</string>
    <string name="common_withdraw">Withdraw</string>

    <string name="tip_button_next_title">Next</string>
    <string name="tip_button_skip_all_title">Skip all</string>

    <!-- Restore by seed phrase screen -->
    <string name="seed_phrase_view_invalid">Seed phrase</string>
    <string name="seed_phrase_view_valid">Seed phrase ✅</string>

    <!-- UiKitAmountsView -->
    <string name="amounts_view_hint">0.0</string>
    <string name="amounts_view_zero_hint">0</string>
    <string name="amounts_max">MAX</string>

    <string name="send_label">You will send</string>
    <string name="send_buy_or_receive_crypto">Buy or receive to continue</string>

    <string name="emoji_money_bag">💰</string>

</resources>
