<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeItem"
        android:icon="@drawable/ic_bottom_navigation_wallet"
        android:title="@string/common_wallet" />
    <item
        android:id="@+id/historyItem"
        android:icon="@drawable/ic_bottom_navigation_history"
        android:title="@string/common_history" />
    <item
        android:id="@+id/sendItem"
        android:icon="@drawable/ic_bottom_navigation_send"
        android:title="@string/common_send" />
    <item
        android:id="@+id/feedbackItem"
        android:icon="@drawable/ic_bottom_navigation_feedback"
        android:title="@string/common_feedback" />
    <item
        android:id="@+id/settingsItem"
        android:icon="@drawable/ic_bottom_navigation_settings"
        android:title="@string/common_settings" />
</menu>