<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="12dp"
    android:background="@drawable/bg_smoke_rounded"
    android:minHeight="312dp"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <TextView
        android:id="@+id/textViewValidationTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:maxLines="1"
        android:paddingVertical="8dp"
        android:text="@string/seed_phrase_view_invalid"
        android:textAppearance="@style/UiKit.TextAppearance.Regular.Text4"
        android:textColor="@color/mountain"
        app:layout_constraintBottom_toBottomOf="@id/textViewPaste"
        app:layout_constraintEnd_toStartOf="@id/textViewPaste"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewPaste" />

    <TextView
        android:id="@+id/textViewPaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_lime_rounded_small"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/common_paste"
        android:textAppearance="@style/UiKit.TextAppearance.SemiBold.Text4"
        android:textColor="@color/text_night"
        app:drawableStartCompat="@drawable/ic_copy_small"
        app:layout_constraintEnd_toStartOf="@id/textViewClear"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@drawable/bg_lime_rounded_small"
        tools:drawableStart="@drawable/ic_copy_small" />

    <TextView
        android:id="@+id/textViewClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_rain_rounded_small"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/common_clear"
        android:textAppearance="@style/UiKit.TextAppearance.SemiBold.Text4"
        android:textColor="@color/night"
        android:visibility="gone"
        app:drawableEndCompat="@drawable/ic_close_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/textViewPaste"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/keysRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPaste"
        tools:itemCount="1"
        tools:listitem="@layout/item_secret_key"
        tools:visibility="visible" />

</merge>
